now able to display correct playlist based on weather anywhere in the world

--- a/weather_html.html
+++ b/weather_html.html
@@ -22,6 +22,8 @@
                 <input type="text" class="form-control" id="city-name">
                 <label for="search">State Name:</label>
                 <input type="text" class="form-control" id="state-name">
+                <label for="search">Country Name:</label>
+                <input type="text" class="form-control" id="country-name">
                 <button type="submit" class="btn btn-default" id="input-location">
                     </i> Search</button>
                 <div class="city"></div>
@@ -59,7 +61,7 @@
         <script src="weatherapi-java.js"></script>
 
         <!-- JSON file -->
-        <script type="text/javascript" src="data.json"></script>
+        <!-- <script type="text/javascript" src="data.json"></script> -->
 </body>
 
 </html>
